--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,18 +1,20 @@
-*{
+* {
     padding: 0;
     margin: 0;
 }
-.space{
+
+.space {
     margin-left: 7%;
     margin-right: 7%;
 }
+
 /* banner container styles  */
 
-header{
+header {
     background-color: #f1c6d0;
 }
 
-.banner-container{
+.banner-container {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -20,14 +22,14 @@ header{
     padding-top: 2rem;
 }
 
-.banner-title{
+.banner-title {
     font-size: 3rem;
     font-weight: 800;
     color: #272727;
     margin-bottom: 1.5rem;
 }
 
-.banner-btn{
+.banner-btn {
     border: none;
     background-color: #E55473;
     padding: 0.9rem 1.5rem;
@@ -36,28 +38,30 @@ header{
     margin-top: 1.5rem;
 }
 
-.banner-img img{
-    width: 100%;;
+.banner-img img {
+    width: 100%;
+    ;
     height: auto;
 }
 
 /* our featured flower container styles  */
 
-.our-featured-container{
+.our-featured-container {
     margin: 3rem 0;
 }
 
-.our-featured-title{
+.our-featured-title {
     font-size: 2rem;
     font-weight: 800;
     color: #272727;
     margin-bottom: 1.5rem;
 }
-.our-featured-content{
+
+.our-featured-content {
     text-align: center;
 }
 
-.featured-items{
+.featured-items {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -65,11 +69,12 @@ header{
     margin-top: 4rem;
 }
 
-.item{
+.item {
     text-align: center;
     padding: 2rem;
 }
-.item1{
+
+.item1 {
     background-color: #e6b0ca;
     border: none;
     border-top-left-radius: 40%;
@@ -77,7 +82,8 @@ header{
     padding: 2rem;
     margin-bottom: 1rem;
 }
-.item2{
+
+.item2 {
     background-color: #bce8eb;
     border: none;
     border-top-left-radius: 40%;
@@ -85,7 +91,8 @@ header{
     padding: 2rem;
     margin-bottom: 1rem;
 }
-.item3{
+
+.item3 {
     background-color: #6c8058;
     border: none;
     border-top-left-radius: 40%;
@@ -94,6 +101,21 @@ header{
     margin-bottom: 1rem;
 }
 
-.item img{
+.item img {
     height: 16rem;
+}
+
+
+/* Responsive for small devices  */
+
+@media screen and (max-width: 668px) {
+    .space {
+        margin-left: 3%;
+        margin-right: 3%;
+    }
+
+    .banner-container,
+    .featured-items {
+        flex-direction: column;
+    }
 }
