--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -77,8 +77,8 @@ header {
 .item1 {
     background-color: #e6b0ca;
     border: none;
-    border-top-left-radius: 40%;
-    border-top-right-radius: 40%;
+    border-top-left-radius: 50%;
+    border-top-right-radius: 50%;
     padding: 2rem;
     margin-bottom: 1rem;
 }
@@ -86,8 +86,8 @@ header {
 .item2 {
     background-color: #bce8eb;
     border: none;
-    border-top-left-radius: 40%;
-    border-top-right-radius: 40%;
+    border-top-left-radius: 50%;
+    border-top-right-radius: 50%;
     padding: 2rem;
     margin-bottom: 1rem;
 }
@@ -95,15 +95,42 @@ header {
 .item3 {
     background-color: #6c8058;
     border: none;
-    border-top-left-radius: 40%;
-    border-top-right-radius: 40%;
+    border-top-left-radius: 50%;
+    border-top-right-radius: 50%;
     padding: 2rem;
     margin-bottom: 1rem;
 }
 
 .item img {
-    height: 16rem;
+    height: 200px;
 }
+
+/* Our services container styles  */
+
+.services-container{
+    height: 200px;
+    margin-bottom: 3rem;
+}
+
+.services-content{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 5rem;
+    background-color: #2727270D;
+    padding: 2rem;
+    border-radius: 8px;
+}
+
+.service {
+    text-align: center;
+}
+
+/* hot deal container styles  */
+
+
+
+
 
 
 /* Responsive for small devices  */
@@ -118,4 +145,35 @@ header {
     .featured-items {
         flex-direction: column;
     }
+    .item img {
+        width: 300px;
+        height: 100%;
+    }
+    .services-container{
+        height: auto;
+    }
+    
+    .services-content{
+        flex-direction: column;
+    }
+    
+}
+
+
+/* Responsive for medium device  */
+
+@media screen and (min-width: 668px) and (max-width: 992px){
+    .space {
+        margin-left: 3%;
+        margin-right: 3%;
+    }
+
+    .banner-container,
+    .featured-items {
+        flex-wrap: wrap;
+    }
+    .services-container{
+        height: auto;
+    }
+    
 }
