--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -162,6 +162,33 @@ header {
 
 /* Instagram container styles start from here  */
 
+.instagram-container{
+    margin-bottom: 3rem;
+}
+
+.instagram-content{
+    text-align: center;
+    margin-bottom: 2.8rem;
+}
+
+.instagram-content-title{
+    font-size: 2.5rem;
+    font-weight: 800;
+    margin-bottom: 1.5rem;
+}
+
+.instagram-images{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+}
+
+.instagram-image img{
+    width: 100%;
+}
+
 
 
 
@@ -193,6 +220,9 @@ header {
     .hot-deal-content{
         flex-direction: column;
     }
+    .instagram-images{
+        grid-template-columns: repeat(1, 1fr);
+    }
     
 }
 
@@ -211,6 +241,9 @@ header {
     }
     .services-container{
         height: auto;
+    }
+    .instagram-images{
+        grid-template-columns: repeat(2, 1fr);
     }
     
 }
