--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -39,11 +39,11 @@ header {
     border-radius: 5px;
     color: #fff;
     margin-top: 1.5rem;
+    margin-bottom: 2rem;
 }
 
 .banner-img img {
     width: 100%;
-    ;
     height: auto;
 }
 
